apps/k8s/admin/homepage/homepage.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: admin
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: homepage
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
        - name: homepage
          image: ghcr.io/gethomepage/homepage:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /app/config/settings.yaml
              subPath: settings.yaml
            - name: config
              mountPath: /app/config/services.yaml
              subPath: services.yaml
            - name: config
              mountPath: /app/config/widgets.yaml
              subPath: widgets.yaml
            - name: config
              mountPath: /app/config/bookmarks.yaml
              subPath: bookmarks.yaml
      volumes:
        - name: config
          configMap:
            name: homepage-config

---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: admin
spec:
  selector:
    app: homepage
  ports:
    - port: 80
      targetPort: http
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  namespace: admin
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
spec:
  rules:
    - host: yggdrasil.rip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
    - host: homepage.yggdrasil.rip
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
